fixed name wrapping

--- a/src/style.scss
+++ b/src/style.scss
@@ -70,9 +70,18 @@ img {
 
     &--welcome{
         display: flex;
-        h1 {
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline;
+
+        &__text {
             padding: 0 0.5rem;
             margin: 15px 0;
+        }
+
+        &__name {
+            padding: 0 0.5rem;
+            margin: 0 0 15px;
         }
     }
     
